bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:6: error: ')' expected but 'return' found.
   return false
   ^